# hard-fs-dashboard

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  lv_conf.h  stm32h750xb_flash.ld
.github/workflows/: clang-format.yml
Drivers/BSP/STM32H745I-DISCO/: stm32h745i_discovery_qspi.c
Inc/: main.h  stm32h7xx_it.h
Src/: main.c  startup_stm32h750xx.S  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscall.c  sysmem.c  system_stm32h7xx.c
Src/Lvgl_Porting/: lvgl_port_lcd.c  lvgl_port_touchpad.c
cmake/: gnu-tools-for-stm32.cmake  vscode_generated.cmake
ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label1.c  ui_comp_label1.h
ui/fonts/: ui_font_Mons110.c  ui_font_TomorrowBoldItalic12.c  ui_font_TomorrowBoldItalic14.c  ui_font_TomorrowBoldItalic18.c  ui_font_TomorrowBoldItalic26.c  ui_font_TomorrowBoldItalic64.c
ui/images/: ui_img_debugframe_png.c  ui_img_ellipse_6_png.c  ui_img_frame_1_png.c  ui_img_fs_dashbord_hard_png.c  ui_img_rectangle_24_png.c  ui_img_rectangle_27_png.c  ui_img_rectangle_6_png.c  ui_img_subtract_png.c
ui/screens/: ui_DebugScreen.c  ui_DebugScreen.h  ui_MainScreen.c  ui_MainScreen.h  ui_Screen1.c  ui_Screen1.h
